--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.13",
+    "@next/third-parties": "^15.2.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
